project_identifier => project_uid, and added missing validations

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -23,7 +23,7 @@ en:
   simple_form:
     labels:
       dashboard:
-        project_identifier: 'Project'
+        project_uid: 'Project'
         password: 'Password'
     hints:
       dashboard:
