Add separate password form for dashboard, wip

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,6 +28,7 @@ en:
     hints:
       dashboard:
         published: "We won't show the dashboard until you mark it as published."
+        password: "Password protection will be removed when saved blank."
   helpers:
     submit:
       dashboard:
